--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -5,6 +5,7 @@
 //<ШРИФТЫ>===============================================================================================
 
 //<Подключаем шрифты>====================================================================================
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,800;1,400;1,600&display=swap");
 @import "fonts";
 //</Подключаем шрифты>===================================================================================
 
@@ -13,7 +14,7 @@
 //</Иконочные шрифты>====================================================================================
 
 //<Шрифт по умолчанию>===================================================================================
-$fontfamily: "";
+$fontfamily: "Open Sans";
 //</Шрифт по умолчанию>==================================================================================
 
 //</ШРИФТЫ>==============================================================================================
@@ -30,7 +31,7 @@ $md4: 479.98;
 //<ОБНУЛЕНИЕ, ОБЩИЕ ПАРАМЕТРЫ>===========================================================================
 @import "null.scss";
 body {
-	color: #000;
+	color: #777;
 	font-size: 14px;
 	&.lock {
 		overflow: hidden;
