--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -5,8 +5,7 @@
 //<ШРИФТЫ>===============================================================================================
 
 //<Подключаем шрифты>====================================================================================
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,800;1,400;1,600&display=swap");
-@import "fonts";
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:regular,italic,600,600italic,800);
 //</Подключаем шрифты>===================================================================================
 
 //<Иконочные шрифты>=====================================================================================
