--- a/Blog/css/style.css
+++ b/Blog/css/style.css
@@ -128,31 +128,29 @@ body.lock {
 
 .search {
   position: relative;
-  width: 200px;
   height: 42px;
 }
 
 .search-input {
   height: 42px;
-  width: 0;
+  width: 200px;
   padding: 0 42px 0 15px;
   border: 5px solid #e2534b;
   border-radius: 5px;
-  -webkit-transition: 0.4s cubic-bezier(0, 0.8, 0, 1);
-  -o-transition: 0.4s cubic-bezier(0, 0.8, 0, 1);
-  transition: 0.4s cubic-bezier(0, 0.8, 0, 1);
+  -webkit-transition: all 0.4s cubic-bezier(0, 0.8, 0, 1);
+  -o-transition: all 0.4s cubic-bezier(0, 0.8, 0, 1);
+  transition: all 0.4s cubic-bezier(0, 0.8, 0, 1);
   position: absolute;
   top: 50px;
   right: 0;
-  z-index: 2;
+  z-index: 5;
   opacity: 0;
+  visibility: hidden;
 }
 
-.search-input:focus {
+.search-input__active {
   opacity: 1;
-  width: 200px;
-  z-index: 1;
-  border: 5px solid #e2534b;
+  visibility: visible;
 }
 
 .search-btn {
@@ -165,6 +163,9 @@ body.lock {
   top: 0;
   right: 0;
   cursor: pointer;
+  -webkit-transition: all 0.4s cubic-bezier(0, 0.8, 0, 1);
+  -o-transition: all 0.4s cubic-bezier(0, 0.8, 0, 1);
+  transition: all 0.4s cubic-bezier(0, 0.8, 0, 1);
 }
 
 .search-btn:before {
@@ -172,9 +173,15 @@ body.lock {
   position: absolute;
   top: 12px;
   right: 13px;
+  z-index: 60;
 }
 
-.search-btn:active {
+.search-btn:hover {
+  background: #e6655e;
+  border-bottom: 5px solid #e2534b;
+}
+
+.search-btn__active {
   background: #e6655e;
   border-bottom: 5px solid #e2534b;
 }
@@ -578,6 +585,43 @@ textarea.input {
   color: #888;
 }
 
+.triangle {
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  -webkit-transition: -webkit-transition 0.3s ease 0s;
+  transition: -webkit-transition 0.3s ease 0s;
+  -o-transition: -o-transition 0.3s ease 0s;
+  transition: transition 0.3s ease 0s;
+  transition: transition 0.3s ease 0s, -webkit-transition 0.3s ease 0s, -o-transition 0.3s ease 0s;
+}
+
+.triangle-menu {
+  display: none;
+  border-bottom: 5px solid #e2534b;
+  position: absolute;
+  top: 45px;
+  left: 12px;
+}
+
+.triangle-search {
+  display: none;
+  position: absolute;
+  border-bottom: 5px solid #e2534b;
+  top: 45px;
+  right: 15px;
+}
+
+.triangle-search__active {
+  display: block;
+}
+
+.active-link {
+  background-color: #6ab3ad;
+  border-bottom: 5px solid #538c87;
+}
+
 .row:after {
   display: block;
   content: "";
@@ -960,7 +1004,7 @@ body.ie .ibg img {
 }
 
 .header__menu {
-  margin-right: -450px;
+  margin-right: -150px;
 }
 
 .menu__list li {
@@ -975,17 +1019,27 @@ body.ie .ibg img {
   text-transform: uppercase;
 }
 
+.menu__link-s:hover {
+  padding-bottom: 28px;
+}
+
+.menu__link-3 {
+  margin-right: 5px;
+}
+
 .menu__sub-list {
   position: absolute;
-  top: 100%;
-  right: 0;
-  background-color: #e2534b;
+  top: 140%;
+  left: 0;
   min-width: 200px;
   border-radius: 5px;
   z-index: 51;
+  background-color: #e2534b;
 }
 
 .menu__sub-list li {
+  white-space: nowrap;
+  padding: 0px 0px 0px 0px;
   margin: 5px;
   border-radius: 5px;
 }
@@ -995,36 +1049,30 @@ body.ie .ibg img {
   color: #fff;
   line-height: 1.23;
   background-color: #e6655e;
-  padding: 8px 17px 8px 26px;
+  padding: 8px 17px 8px 11px;
 }
 
 .menu__sub-link:hover {
   background-color: #76c7c0;
+  border-radius: 5px;
 }
 
-/*
-	Стиль иконки бургера
-	.icon-menu{
-		display: block;
-		position: absolute;
-		top: 18px;
-		right: 10px;
-		width:30px;
-		height: 18px;
-		cursor: pointer;
-		z-index: 5;
-		span{@include anim(0.3s,0s);top: 8px;left: 0px;position: absolute;width: 100%;height: 2px;background-color: #000;
-			&:first-child{top: 0px;}
-			&:last-child{top: auto;bottom: 0px;}
-		}
-		&.active{
-			span{@include scale(0);
-				&:first-child{@include rotate(-45deg);top: 8px;}
-				&:last-child{@include rotate(45deg);bottom: 8px;}
-			}
-		}
-	}
-*/
+.menu__sub-link span {
+  margin-right: 8px;
+}
+
+body._pc .menu__list > li:hover .menu__sub-list {
+  opacity: 1;
+  visibility: visible;
+  -webkit-transform: translate(0, 0);
+      -ms-transform: translate(0, 0);
+          transform: translate(0, 0);
+  pointer-events: all;
+}
+
+body._pc .menu__list > li:hover .triangle-menu {
+  display: block;
+}
 
 @media (min-width: 767.98px) {
   .menu__list {
@@ -1037,7 +1085,18 @@ body.ie .ibg img {
   }
 
   .menu__list li {
-    padding: 10px 0px;
+    padding: 10px;
+    border-bottom: 5px solid transparent;
+    -webkit-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+  }
+
+  .menu__list li:hover {
+    cursor: pointer;
+    border-radius: 5px;
+    background: #e6655e;
+    border-bottom: 5px solid #e2534b;
   }
 
   .menu__sub-list {
@@ -1046,9 +1105,6 @@ body.ie .ibg img {
             transform: translate(0px, 10%);
     opacity: 0;
     visibility: hidden;
-    -webkit-transition: all 0.2s ease 0s;
-    -o-transition: all 0.2s ease 0s;
-    transition: all 0.2s ease 0s;
     pointer-events: none;
   }
 }
@@ -1075,6 +1131,91 @@ body.ie .ibg img {
     width: 50px;
     height: 50px;
     line-height: 50px;
+  }
+
+  .menu__body {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #76c7c0;
+    padding: 100px 30px 30px 30px;
+    -webkit-transition: left 0.3s ease 0s;
+    -o-transition: left 0.3s ease 0s;
+    transition: left 0.3s ease 0s;
+  }
+
+  .menu__list {
+    font-size: 22px;
+  }
+
+  .menu__list li {
+    margin: 0px 0px 30px 0px;
+  }
+
+  .menu__list li:last-child {
+    margin: 0px 0px 0px 0px;
+  }
+
+  .menu__sub-list {
+    position: relative;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
+    margin: 20px 0px 0px 0px;
+  }
+
+  .icon-menu {
+    display: block;
+    position: absolute;
+    top: 20px;
+    right: 10px;
+    width: 30px;
+    height: 18px;
+    cursor: pointer;
+    z-index: 5;
+  }
+
+  .icon-menu span {
+    -webkit-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+    top: 8px;
+    left: 0px;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+  }
+
+  .icon-menu span:first-child {
+    top: 0px;
+  }
+
+  .icon-menu span:last-child {
+    top: auto;
+    bottom: 0px;
+  }
+
+  .icon-menu.active span {
+    -ms-transform: scale(0);
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  }
+
+  .icon-menu.active span:first-child {
+    -ms-transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    top: 8px;
+  }
+
+  .icon-menu.active span:last-child {
+    -ms-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+    bottom: 8px;
   }
 }
 
