--- a/Blog/css/style.css
+++ b/Blog/css/style.css
@@ -96,6 +96,7 @@ h6 {
 body {
   color: #777;
   font-size: 14px;
+  background-color: #f3f3f3;
 }
 
 body.lock {
@@ -146,6 +147,7 @@ body.lock {
   z-index: 5;
   opacity: 0;
   visibility: hidden;
+  color: #7f8c8c;
 }
 
 .search-input__active {
@@ -942,6 +944,190 @@ body.ie .ibg img {
 
 .baloon-close {
   top: 18px !important;
+}
+
+/* Слайдер */
+
+/* Слайдер запущен */
+
+/* Слайдер с точками */
+
+/* Ограничивающая оболочка */
+
+.slick-list {
+  overflow: hidden;
+}
+
+/* Лента слайдов */
+
+.slick-track {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+/* Слайд */
+
+/* Слайд активный (показывается) */
+
+/* Слайд основной */
+
+/* Слайд по центру */
+
+/* Клонированный слайд */
+
+/* Стрелка */
+
+/* Стрелка влево */
+
+/* Стрелка вправо */
+
+/* Стрелка не активная */
+
+/* Точки (булиты) */
+
+/* Активная точка */
+
+/* Элемент точки */
+
+.home__slider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #7f8c8c;
+  position: absolute;
+  width: 100%;
+  height: calc(100% - 130px);
+}
+
+.home__slider .slick-arrow {
+  font-size: 0;
+}
+
+.home__slider .slick-arrow.slick-prev {
+  background-color: #e6655e;
+  width: 50px;
+  height: 57px;
+  border-bottom: 3px solid #e2534b;
+  border-radius: 5px;
+  position: relative;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+.home__slider .slick-arrow.slick-prev:before {
+  content: url(../img/icons/double-arrows-left.png);
+  position: absolute;
+  top: 18px;
+  left: 10px;
+}
+
+.home__slider .slick-arrow.slick-prev:active {
+  background-color: #e2534b;
+}
+
+.home__slider .slick-arrow.slick-next {
+  background-color: #e6655e;
+  width: 50px;
+  height: 57px;
+  border-bottom: 3px solid #e2534b;
+  border-radius: 5px;
+  position: relative;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+.home__slider .slick-arrow.slick-next:before {
+  content: url(../img/icons/double-arrows-right.png);
+  position: absolute;
+  top: 18px;
+  right: 10px;
+}
+
+.home__slider .slick-arrow.slick-next:active {
+  background-color: #e2534b;
+}
+
+.home__slider .slick-dots {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  bottom: -30px;
+}
+
+.home__slider .slick-dots li {
+  list-style: none;
+  margin: 0px 5px;
+}
+
+.home__slider .slick-dots li button {
+  font-size: 0;
+  width: 60px;
+  height: 5px;
+  background-color: #b0b8b9;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+.home__slider .slick-dots li.slick-active button {
+  background-color: #e2534b;
+}
+
+.home__slider-item {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.slider-home__title {
+  display: inline-block;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 50px;
+  font-weight: 800;
+  line-height: 1.2;
+  background-color: #e2534b;
+  padding: 6px 12px;
+  border-radius: 5px;
+  margin: 0px 0px 10px 0px;
+}
+
+.slider-home__subtitle {
+  display: inline-block;
+  max-width: 470px;
+  border-radius: 5px;
+  text-align: center;
+  font-size: 16px;
+  color: #fff;
+  line-height: 1.63;
+  background-color: #000;
+  padding: 15px 38px;
 }
 
 .popup {
