--- a/#source/scss/forms.scss
+++ b/#source/scss/forms.scss
@@ -28,7 +28,7 @@
 	border-radius: 5px;
 	transition: all 0.4s cubic-bezier(0, 0.8, 0, 1);
 	position: absolute;
-	top: 50px;
+	top: 47px;
 	right: 0;
 	z-index: 5;
 	opacity: 0;
@@ -44,8 +44,8 @@
 	background: transparent;
 	border-bottom: 5px solid transparent;
 	border-radius: 5px;
-	height: 42px;
-	width: 42px;
+	height: 41px;
+	width: 41px;
 	position: absolute;
 	top: 0;
 	right: 0;
@@ -71,9 +71,31 @@
 
 //<BUTTONS (a.btn+tab)>===============================================================================
 .btn {
-	display: inline-block;
-	padding: 0px 0px;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	color: #fff;
+	font-size: 20px;
+	font-weight: 600;
+	line-height: 24px;
+	white-space: nowrap;
+	padding: 0px 44px;
+	width: 200px;
+	height: 50px;
+	background-color: #e6655e;
+	border-bottom: 4px solid #e2534b;
+	border-radius: 5px;
+	transition: all 0.3s ease 0s;
 	&:hover {
+		background-color: #76c7c0;
+		border-bottom: 4px solid #538c87;
+	}
+	&-services {
+		font-size: 14px;
+		line-height: 16px;
+		background-color: #76c7c0;
+		border-bottom: 4px solid #538c87;
 	}
 	&.fw {
 		width: 100%;
